tests/ui/rfcs/rfc-2632-const-trait-impl/const-closure-parse-not-item.stderr
error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/const-closure-parse-not-item.rs:7:32
   |
LL | const fn test() -> impl ~const Fn() {
   |                                ^^^^

error: aborting due to previous error

